# python_snake_game

./: .gitignore  ARCHITECTURE.md  CI_CD.md  ENHANCEMENTS.md  FEATURES.md  GAMEPLAY.md  Project-Detail.md  QUICKSTART.md  README.md  game_config.py  game_renderer.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  snake_game.py  snake_game_modular.py  test_game.py  todo.txt
.github/workflows/: ci-cd.yml
docs/: ARCHITECTURE.md  CI_CD.md  ENHANCEMENTS.md  QUICKSTART.md
src/: __init__.py  snake_game_modular.py
src/modules/: __init__.py  game_renderer.py  score_manager.py
tests/: test_game.py
